--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<h1>My test page</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Test page</title>
+</head>
+<body>
+  <h1>My test page</h1>
 
-<p>This is a test</p>
+  <p>This is a test</p>
+</body>
+</html>
