--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>Test page</title>
+  <style>
+    background-color: #b0fff4;
+  </style>
 </head>
 <body>
   <h1>My test page</h1>
