--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
             margin-right: 2%;
             margin-top: 2%;
             margin-bottom: 2%;
+            position: absolute;
+            top: 0px;
+            left: 0px;
         }
         #projectDiv {
             text-align: center;
@@ -103,19 +106,16 @@
             font-weight: bold;
             position: relative;
             color: black;
-            top: -85%;
+            top: 10%;
             box-shadow: 0 10px 13px 0 rgba(0,0,0,0.8), 0 10px 15px 0 rgba(0,0,0,0.9);
         }
         .btnReadMore {
             position: relative;
-            top: -65%;
+            top: 110px;
             padding: 10px 22px;
             background-color: #140f1cd5;
             border-width: 3px;
             font-size: larger;
-        }
-        .btnReadMore:hover {
-            opacity: 1;
         }
         #contactMeDiv{
             text-align: center;
